--- a/src/WebUI/ClientApp/src/index.html
+++ b/src/WebUI/ClientApp/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>WebUI</title>
+    <title>Parking Lot System</title>
     <base href="/" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
